--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,14 +5,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".ui.view.MainActivity">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycleVewProducts"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
          />
-
     <TextView
         android:id="@+id/emptyListTv"
         android:layout_width="match_parent"
