--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,6 +24,7 @@
       android:id="@+id/buttonAddProduct"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
+      android:src="@drawable/ic_add_24"
       android:layout_margin="20dp"
       android:layout_gravity="bottom|right"
       />
